fixup too much whitespace in education

--- a/css/sections/education.css
+++ b/css/sections/education.css
@@ -1,6 +1,11 @@
 .section.education .object {
 	margin-bottom: 1em; 
 }
+
+.section.education .object:last-child {
+	margin-bottom: 0; 
+}
+
 .section.education .content.type {
 	display: none;
 }
